Add Gitter link

--- a/README
+++ b/README
@@ -15,3 +15,5 @@ nettail-client <ip> <remote filename>
 
 
 This file was last revised 2016-10-14
+
+Join the chat at https://gitter.im/nettail/Lobby
